@@ -1,3 +1,8 @@
+2007-03-10 16:07  nick
+
+	* plugins/launcher/launcher-dialog.c: Don't append the %f. Too much side effects as
+	  suggested by Jannis.
+
 2007-03-10 8:27   nick
 
 	* plugins/launcher/launcher-exec.c: ifdef the startup data structure.
